# WolfManagerRust

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.roo/rules-architect/: AGENTS.md
.roo/rules-ask/: AGENTS.md
.roo/rules-code/: AGENTS.md
.roo/rules-debug/: AGENTS.md
config/: default.toml
crates/wm-adapters/: Cargo.toml
crates/wm-adapters/src/: lib.rs  wolf_proxy.rs
crates/wm-api/: Cargo.toml
crates/wm-api/src/: main.rs
crates/wm-api/src/middleware/: cors.rs
crates/wm-api/src/routes/: wolf.rs
crates/wm-config/: Cargo.toml
crates/wm-config/src/: lib.rs
crates/wm-core/: Cargo.toml
crates/wm-core/src/: lib.rs
crates/wm-storage/: Cargo.toml
crates/wm-storage/migrations/: 0001_init.sql  20250101_init.sql
crates/wm-storage/src/: lib.rs
docs/: Variables.md
reference/: wolfapispec.json
