[package]
name = "wm-adapters"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
bytes.workspace = true
http.workspace = true
futures-core.workspace = true
futures-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util = "0.1"
axum.workspace = true